<resources>
    <string name="app_name">TRIPAWY</string>
    <string name="edit">Edit</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="start">Start</string>
    <string name="notes">Notes</string>
   <!-- <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>-->
    <!-- TODO: Remove or change this placeholder text -->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="tripName">Trip Name</string>
    <string name="startPoint">Start Point</string>
    <string name="endPoint">End Point</string>
    <string name="repeat">Repeat</string>
    <string name="type" translatable="false">Type</string>
    <string name="noRepeat" translatable="false">No Repeat</string>
    <string name="repeatDaily" translatable="false">Repeat Daily</string>
    <string name="repeatWeekly" translatable="false">Repeat Weekly</string>
    <string name="repeatMonthly" translatable="false">Repeat Monthly</string>
    <string name="oneWayTrip" translatable="false">One Way Trip</string>
    <string name="roundTrip" translatable="false">Round Trip</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="option_1">Add Note</string>
    <string name="option_2">Edit</string>
    <string name="option_3">Delete</string>
    <string name="option_4">Cancel</string>
    <string name="add">Add</string>
    <string name="add_trip">ADD Trip</string>
    <string name="status">Status : </string>
    <string name="save">save</string>
    <string name="delete" translatable="false" />
    <string name="deletee">delete</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_with_google" translatable="false">login with google</string>
    <string name="sign_in">Sign In</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="newUser">New User ?</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_an_user">Already an user ?</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="deleteAll">Delete All</string>
    <string name="menu_history">History</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="email">Email</string>

    <string name="api_key" translatable="false">AIzaSyCGljGwBBFfH2L79A9lseHKM_wKVj1Bc-c</string>
    <string name="no_upcoming_trips">No Upcoming Trips</string>
    <string name="no_history_trips">No History Trips</string>
    <string name="state">State</string>
    <string name="add_notes">ADD Notes</string>
    <string name="sync">Sync</string>
    <string name="log_out">Log out</string>
    <string name="start_details" translatable="false">Start Details</string>
    <string name="option_0">Recall</string>
    <string name="todo" translatable="false">TODO</string>
</resources>