<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_menu_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_edu_24"
            android:title="@string/menu_history" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">

        <item
        android:id="@+id/btn_sync"
        android:checkable="true"
        android:icon="@drawable/ic_baseline_sync_24"
        android:title="@string/sync" />
        <item
            android:id="@+id/btn_logout"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/log_out" />
    </group>


</menu>