<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:padding="50dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/newUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_an_user"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/txtsignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="signIn"
            android:text="@string/sign_in"
            android:textColor="@color/light_blue_900" />
    </LinearLayout>
    <EditText
        android:id="@+id/editTextFirstNameSU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:id="@+id/editTextLastNameSU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        />


    <EditText
        android:id="@+id/editTextEmailSU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
       />

    <EditText
        android:id="@+id/editTextPasswordSU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        />



    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setBtn_signUp"
        android:text="@string/sign_up"
        android:layout_gravity="center_horizontal"
        />






</LinearLayout>