<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6"
            android:layout_marginBottom="10dp">



            <TextView
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.5"
                android:fontFamily="@font/pantondemo_black"
                android:gravity="center_horizontal"
                android:text="@string/title"
                android:textColor="@color/sky"
                android:textSize="25dp" />
            <ImageButton
                android:id="@+id/btnMore"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                android:layout_weight=".5"

                android:background="?attr/selectableItemBackgroundBorderless"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/ic_baseline_more_vert_24" />

        </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="2"
    android:layout_marginBottom="10dp"
    android:layout_marginRight="20dp">

    <TextView
        android:id="@+id/txtFrom"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
      android:fontFamily="@font/comfortaa_bold"
        android:textColor="@color/sky"
        android:text="@string/from"
        android:textSize="17dp"
        android:textAlignment="textStart"
        android:layout_marginLeft="25dp"
        android:drawableLeft="@drawable/ic_baseline_place_24"
        android:drawablePadding="10dp"


        />
    <TextView
        android:id="@+id/txtDate"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/comfortaa_bold"
        android:textColor="@color/sky"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:textAlignment="textStart"
        android:text="@string/date"
        android:textSize="17dp"
        android:drawableLeft="@drawable/ic_baseline_date_range_24"
        android:drawablePadding="10dp"
        />
</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp">


            <TextView
                android:id="@+id/txtTo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa_bold"
                android:textColor="@color/sky"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textAlignment="textStart"
                android:layout_marginLeft="25dp"
                android:textSize="17dp"
                android:drawableLeft="@drawable/ic_baseline_place_24"
                android:drawablePadding="10dp"
                 />
            <TextView
                android:id="@+id/txtTime"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa_bold"
                android:textColor="@color/sky"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textAlignment="textStart"
                android:drawableLeft="@drawable/ic_baseline_access_time_24"
                android:drawablePadding="10dp"
                android:text="@string/time"
                android:textSize="17dp"
                 />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="50dp">
            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:gravity="end"
                android:layout_marginRight="20dp"
                android:textSize="15dp"
                android:fontFamily="@font/comfortaa_bold"
                android:textColor="@color/sky"
                />
            <TextView
                android:id="@+id/txtState"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="-10dp"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textSize="15dp"
                android:fontFamily="@font/comfortaa_bold"
                android:textColor="@color/sky"
               />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            >

            <Button
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/start"
                android:textColor="@color/sky"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                app:strokeColor="@color/sky"
                android:fontFamily="@font/pantondemo_black"
                android:layout_marginRight="40dp"
                />

            <Button
                android:id="@+id/btnNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textColor="@color/sky"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                app:strokeColor="@color/sky"
                android:layout_marginLeft="40dp"
                android:fontFamily="@font/pantondemo_black"
                />


        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>

