<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinatorLogIn"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:orientation="vertical"
        android:background="@drawable/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="50dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/yellow"
        android:textSize="30dp"
        android:fontFamily="@font/pantondemo_black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        >
        <TextView
            android:id="@+id/newUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newUser"
            android:fontFamily="@font/comfortaa_light"
            android:textColor="@color/yellow"
            android:textSize="15sp"
            android:layout_marginRight="10dp"
         />

        <TextView
            android:id="@+id/createNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:fontFamily="@font/comfortaa_bold"
            android:textColor="@color/yellow"
            android:onClick="createNew"/>
    </LinearLayout>


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:ems="15"
        android:hint="@string/email"
        android:textColor="@color/yellow"
        android:textColorHint="@color/yellow"
        android:fontFamily="@font/comfortaa_light"
        android:backgroundTint="@color/yellow"
        android:textCursorDrawable="@null"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="15dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="70dp"
        android:textColor="@color/yellow"
        android:textColorHint="@color/yellow"
        android:fontFamily="@font/comfortaa_light"
        android:backgroundTint="@color/yellow"
        android:textCursorDrawable="@null"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="15dp"/>



    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:onClick="signIn"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:textColor="@color/sky"
        android:fontFamily="@font/comfortaa_light"
        android:backgroundTint="@color/yellow" />


</LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>